--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,149 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+* {
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+ 
+  background-image: url('../public/black_dark_shadow_9663_1366x768.jpg');
+  background-repeat: no-repeat;
+  background-size:cover ;
+  background-attachment:fixed ;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  color: #fff;
+  margin-bottom: 0.5rem;
+  font-size: 1.75rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.TodoWrapper {
+  background:linear-gradient(135deg,rgba(6, 5, 5, 0.01),rgba(255,255,255,0));
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border-radius: 20px rgba(255,255,255,0.18);
+  border: 1px solid ;
+  margin-top: 5rem;
+  padding: 2rem;
+  border-radius: 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.TodoForm {
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+.todo-input {
+  outline: none;
+  background: none;
+  border: 1px solid white;
+  border-right: none;
+  padding:0.55rem;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  width: 300px;
+  color: #f4f4f4;
+}
+.todo-inputEdit {
+  outline: none;
+  background: #8a787829;
+  border: 1px solid rgb(155, 17, 17);
+  border-right: none;
+  padding: 0.75rem 1rem;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  width: 300px;
+  color: #f4f4f4;
+}
+
+.todo-input::placeholder {
+  color: rgb(255, 255, 255);
+  
+}
+
+.todo-btn {
+  background-color: transparent;
+  border: 1px solid rgb(255, 255, 255);
+  color: #fff;
+  padding: 0.55rem;
+  cursor: pointer;
+  border-left: none;
+  
+}
+.todo-btnEdit {
+  background-color: transparent;
+  border: 1px solid  rgba(155, 17, 17, 0.745);
+  color: #fff;
+  padding: 0.75rem;
+  cursor: pointer;
+  border-left: none;
+  
+}
+
+.Todo {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background:linear-gradient(135deg,rgba(6, 5, 5, 0.01),rgba(255,255,255,0));
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border-radius: 20px rgba(255,255,255,0.18);
+  border: 1px solid ;
+  color: #fff;
+  padding: 0.75rem 1rem;
+  border-radius: 5px;
+  margin-bottom: 1rem;
+}
+.TodoCompleted {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #c0de37;
+  color: #000000;
+  padding: 0.75rem 1rem;
+  border-radius: 5px;
+  margin-bottom: 1rem;
 }
 
-.App-link {
-  color: #61dafb;
+.fa-trash {
+  margin-right: 0.75rem;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.incompleted {
+  color: #fff;
+  cursor: pointer;
 }
+
+.completed {
+  color: #ffffff;
+  text-decoration: line-through;
+  cursor: pointer;
+}
+
+.edit-icon,
+.delete-icon {
+  cursor: pointer;
+  
+}
+
+.buttonDive{
+  height: 30px;
+  width: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+ 
